raylib/raylib_bindings.odin

    funcs.text_to_lower = text_to_lower;
    funcs.text_to_pascal = text_to_pascal;
    funcs.text_to_integer = text_to_integer;
    funcs.draw_line_3d = draw_line_3d;
    funcs.draw_circle_3d = draw_circle_3d;
    funcs.draw_cube = draw_cube;
    funcs.draw_cube_v = draw_cube_v;
    funcs.draw_cube_wires = draw_cube_wires;
    funcs.draw_cube_wires_v = draw_cube_wires_v;
    funcs.draw_cube_texture = draw_cube_texture;
    funcs.draw_sphere = draw_sphere;
    funcs.draw_sphere_ex = draw_sphere_ex;
    funcs.draw_sphere_wires = draw_sphere_wires;
    funcs.draw_cylinder = draw_cylinder;
    funcs.draw_cylinder_wires = draw_cylinder_wires;
    funcs.draw_plane = draw_plane;
    funcs.draw_ray = draw_ray;
    funcs.draw_grid = draw_grid;
    funcs.draw_gizmo = draw_gizmo;
    funcs.load_model = load_model;
    funcs.load_model_from_mesh = load_model_from_mesh;
    funcs.unload_model = unload_model;
    funcs.load_mesh = load_mesh;
    funcs.unload_mesh = unload_mesh;
    funcs.export_mesh = export_mesh;
    funcs.mesh_bounding_box = mesh_bounding_box;
    funcs.mesh_tangents = mesh_tangents;
    funcs.mesh_binormals = mesh_binormals;
    funcs.gen_mesh_poly = gen_mesh_poly;
    funcs.gen_mesh_plane = gen_mesh_plane;
    funcs.gen_mesh_cube = gen_mesh_cube;
    funcs.gen_mesh_sphere = gen_mesh_sphere;
    funcs.gen_mesh_hemi_sphere = gen_mesh_hemi_sphere;
    funcs.gen_mesh_cylinder = gen_mesh_cylinder;
    funcs.gen_mesh_torus = gen_mesh_torus;
    funcs.gen_mesh_knot = gen_mesh_knot;
    funcs.gen_mesh_heightmap = gen_mesh_heightmap;
    funcs.gen_mesh_cubicmap = gen_mesh_cubicmap;
    funcs.load_material = load_material;
    funcs.load_material_default = load_material_default;
    funcs.unload_material = unload_material;
    funcs.draw_model = draw_model;
    funcs.draw_model_ex = draw_model_ex;
    funcs.draw_model_wires = draw_model_wires;
    funcs.draw_model_wires_ex = draw_model_wires_ex;
    funcs.draw_bounding_box = draw_bounding_box;
    funcs.draw_billboard = draw_billboard;
    funcs.draw_billboard_rec = draw_billboard_rec;
    funcs.check_collision_spheres = check_collision_spheres;
    funcs.check_collision_boxes = check_collision_boxes;
    funcs.check_collision_box_sphere = check_collision_box_sphere;
    funcs.check_collision_ray_sphere = check_collision_ray_sphere;
    funcs.check_collision_ray_sphere_ex = check_collision_ray_sphere_ex;
    funcs.check_collision_ray_box = check_collision_ray_box;
    funcs.get_collision_ray_model = get_collision_ray_model;
    funcs.get_collision_ray_triangle = get_collision_ray_triangle;
    funcs.get_collision_ray_ground = get_collision_ray_ground;
    funcs.load_text = load_text;
    funcs.load_shader = load_shader;
    funcs.load_shader_code = load_shader_code;
    funcs.unload_shader = unload_shader;
    funcs.get_shader_default = get_shader_default;
    funcs.get_texture_default = get_texture_default;
    funcs.get_shader_location = get_shader_location;
    funcs.set_shader_value = set_shader_value;
    funcs.set_shader_value_v = set_shader_value_v;
    funcs.set_shader_value_matrix = set_shader_value_matrix;
    funcs.set_matrix_projection = set_matrix_projection;
    funcs.set_matrix_modelview = set_matrix_modelview;
    funcs.get_matrix_modelview = get_matrix_modelview;
    funcs.gen_texture_cubemap = gen_texture_cubemap;
    funcs.gen_texture_irradiance = gen_texture_irradiance;
    funcs.gen_texture_prefilter = gen_texture_prefilter;
    funcs.gen_texture_brdf = gen_texture_brdf;
    funcs.begin_shader_mode = begin_shader_mode;
    funcs.end_shader_mode = end_shader_mode;
    funcs.begin_blend_mode = begin_blend_mode;
    funcs.end_blend_mode = end_blend_mode;
    funcs.begin_scissor_mode = begin_scissor_mode;
    funcs.end_scissor_mode = end_scissor_mode;
    funcs.get_vr_device_info = get_vr_device_info;
    funcs.init_vr_simulator = init_vr_simulator;
    funcs.update_vr_tracking = update_vr_tracking;
    funcs.close_vr_simulator = close_vr_simulator;
    funcs.is_vr_simulator_ready = is_vr_simulator_ready;
    funcs.toggle_vr_mode = toggle_vr_mode;
    funcs.begin_vr_drawing = begin_vr_drawing;
    funcs.end_vr_drawing = end_vr_drawing;
    funcs.init_audio_device = init_audio_device;
    funcs.close_audio_device = close_audio_device;
    funcs.is_audio_device_ready = is_audio_device_ready;
    funcs.set_master_volume = set_master_volume;
    funcs.load_wave = load_wave;
    funcs.load_wave_ex = load_wave_ex;
    funcs.load_sound = load_sound;
    funcs.load_sound_from_wave = load_sound_from_wave;
    funcs.update_sound = update_sound;
    funcs.unload_wave = unload_wave;
    funcs.unload_sound = unload_sound;
    funcs.export_wave = export_wave;
    funcs.export_wave_as_code = export_wave_as_code;
    funcs.play_sound = play_sound;
    funcs.pause_sound = pause_sound;
    funcs.resume_sound = resume_sound;
    funcs.stop_sound = stop_sound;
    funcs.is_sound_playing = is_sound_playing;
    funcs.set_sound_volume = set_sound_volume;
    funcs.set_sound_pitch = set_sound_pitch;
    funcs.wave_format = wave_format;
    funcs.wave_copy = wave_copy;
    funcs.wave_crop = wave_crop;
    funcs.get_wave_data = get_wave_data;
    funcs.load_music_stream = load_music_stream;
    funcs.unload_music_stream = unload_music_stream;
    funcs.play_music_stream = play_music_stream;
    funcs.update_music_stream = update_music_stream;
    funcs.stop_music_stream = stop_music_stream;
    funcs.pause_music_stream = pause_music_stream;
    funcs.resume_music_stream = resume_music_stream;
    funcs.is_music_playing = is_music_playing;
    funcs.set_music_volume = set_music_volume;
    funcs.set_music_pitch = set_music_pitch;
    funcs.set_music_loop_count = set_music_loop_count;
    funcs.get_music_time_length = get_music_time_length;
    funcs.get_music_time_played = get_music_time_played;
    funcs.init_audio_stream = init_audio_stream;
    funcs.update_audio_stream = update_audio_stream;
    funcs.close_audio_stream = close_audio_stream;
    funcs.is_audio_buffer_processed = is_audio_buffer_processed;
    funcs.play_audio_stream = play_audio_stream;
    funcs.pause_audio_stream = pause_audio_stream;
    funcs.resume_audio_stream = resume_audio_stream;
    funcs.is_audio_stream_playing = is_audio_stream_playing;
    funcs.stop_audio_stream = stop_audio_stream;
    funcs.set_audio_stream_volume = set_audio_stream_volume;
    funcs.set_audio_stream_pitch = set_audio_stream_pitch;
}

@(default_calling_convention="c")
foreign raylib {

    @(link_name="InitWindow")
    init_window :: proc(
        width : _c.int,
        height : _c.int,
        title : cstring
    ) ---;

    @(link_name="WindowShouldClose")
    window_should_close :: proc() -> bool ---;

    @(link_name="CloseWindow")
    close_window :: proc() ---;

    @(link_name="IsWindowReady")
    is_window_ready :: proc() -> bool ---;

    @(link_name="IsWindowMinimized")
    is_window_minimized :: proc() -> bool ---;

    @(link_name="IsWindowResized")
    is_window_resized :: proc() -> bool ---;

    @(link_name="IsWindowHidden")
    is_window_hidden :: proc() -> bool ---;

    @(link_name="ToggleFullscreen")
    toggle_fullscreen :: proc() ---;

    @(link_name="UnhideWindow")
    unhide_window :: proc() ---;

    @(link_name="HideWindow")
    hide_window :: proc() ---;

    @(link_name="SetWindowIcon")
    set_window_icon :: proc(image : Image) ---;

    @(link_name="SetWindowTitle")
    set_window_title :: proc(title : cstring) ---;

    @(link_name="SetWindowPosition")
    set_window_position :: proc(
        x : _c.int,
        y : _c.int
    ) ---;

    @(link_name="SetWindowMonitor")
    set_window_monitor :: proc(monitor : _c.int) ---;

    @(link_name="SetWindowMinSize")
    set_window_min_size :: proc(
        width : _c.int,
        height : _c.int
    ) ---;

    @(link_name="SetWindowSize")
    set_window_size :: proc(
        width : _c.int,
        height : _c.int
    ) ---;

    @(link_name="GetWindowHandle")
    get_window_handle :: proc() -> rawptr ---;

    @(link_name="GetScreenWidth")
    get_screen_width :: proc() -> _c.int ---;

    @(link_name="GetScreenHeight")
    get_screen_height :: proc() -> _c.int ---;

    @(link_name="GetMonitorCount")
    get_monitor_count :: proc() -> _c.int ---;

    @(link_name="GetMonitorWidth")
    get_monitor_width :: proc(monitor : _c.int) -> _c.int ---;

    @(link_name="GetMonitorHeight")
    get_monitor_height :: proc(monitor : _c.int) -> _c.int ---;

    @(link_name="GetMonitorPhysicalWidth")
    get_monitor_physical_width :: proc(monitor : _c.int) -> _c.int ---;

    @(link_name="GetMonitorPhysicalHeight")
    get_monitor_physical_height :: proc(monitor : _c.int) -> _c.int ---;

    @(link_name="GetMonitorName")
    get_monitor_name :: proc(monitor : _c.int) -> cstring ---;

    @(link_name="GetClipboardText")
    get_clipboard_text :: proc() -> cstring ---;

    @(link_name="SetClipboardText")
    set_clipboard_text :: proc(text : cstring) ---;

    @(link_name="IsCursorHidden")
    is_cursor_hidden :: proc() -> bool ---;

    @(link_name="EnableCursor")
    enable_cursor :: proc() ---;

    @(link_name="DisableCursor")
    disable_cursor :: proc() ---;

    @(link_name="ClearBackground")
    clear_background :: proc(color : Color) ---;

    @(link_name="BeginDrawing")
    begin_drawing :: proc() ---;

    @(link_name="EndDrawing")
    end_drawing :: proc() ---;

    @(link_name="BeginMode2D")
    begin_mode_2d :: proc(camera : Camera2D) ---;

    @(link_name="EndMode2D")
    end_mode_2d :: proc() ---;

    @(link_name="BeginMode3D")
    begin_mode_3d :: proc(camera : Camera3D) ---;

    @(link_name="EndMode3D")
    end_mode_3d :: proc() ---;

    @(link_name="BeginTextureMode")
    begin_texture_mode :: proc(target : RenderTexture2D) ---;

    @(link_name="EndTextureMode")
    end_texture_mode :: proc() ---;

    @(link_name="GetMouseRay")
    get_mouse_ray :: proc(
        mouse_position : Vector2,
        camera : Camera
    ) -> Ray ---;

    @(link_name="GetWorldToScreen")
    get_world_to_screen :: proc(
        position : Vector3,
        camera : Camera
    ) -> Vector2 ---;

    @(link_name="GetCameraMatrix")
    get_camera_matrix :: proc(camera : Camera) -> Matrix ---;

    @(link_name="SetTargetFPS")
    set_target_fps :: proc(fps : _c.int) ---;

    @(link_name="GetFPS")
    get_fps :: proc() -> _c.int ---;

    @(link_name="GetFrameTime")
    get_frame_time :: proc() -> _c.float ---;

    @(link_name="GetTime")
    get_time :: proc() -> _c.double ---;

    @(link_name="ColorToInt")
    color_to_int :: proc(color : Color) -> _c.int ---;

    @(link_name="ColorNormalize")
    color_normalize :: proc(color : Color) -> Vector4 ---;

    @(link_name="ColorToHSV")
    color_to_hsv :: proc(color : Color) -> Vector3 ---;

    @(link_name="ColorFromHSV")
    color_from_hsv :: proc(hsv : Vector3) -> Color ---;

    @(link_name="GetColor")
    get_color :: proc(hex_value : _c.int) -> Color ---;

    @(link_name="Fade")
    fade :: proc(
        color : Color,
        alpha : _c.float
    ) -> Color ---;

    @(link_name="SetConfigFlags")
    set_config_flags :: proc(flags : ConfigFlag) ---;

    @(link_name="SetTraceLogLevel")
    set_trace_log_level :: proc(log_type : TraceLogType) ---;

    @(link_name="SetTraceLogExit")
    set_trace_log_exit :: proc(log_type : TraceLogType) ---;

    @(link_name="SetTraceLogCallback")
    set_trace_log_callback :: proc(callback : TraceLogCallback) ---;

    @(link_name="TraceLog")
    trace_log :: proc(
        log_type : TraceLogType,
        text : cstring
    ) ---;

    @(link_name="TakeScreenshot")
    take_screenshot :: proc(file_name : cstring) ---;

    @(link_name="GetRandomValue")
    get_random_value :: proc(
        min : _c.int,
        max : _c.int
    ) -> _c.int ---;

    @(link_name="FileExists")
    file_exists :: proc(file_name : cstring) -> bool ---;
